Fix navigation on Safari

--- a/app/assets/stylesheets/modules/navigation.css
+++ b/app/assets/stylesheets/modules/navigation.css
@@ -12,14 +12,16 @@
     right: 0;
     background: white;
     z-index: 1;
-    display: flex;
-    justify-content: right;
-    align-items: end;
+    display: block;
     padding: 0 2em 4em 0;
   }
 
   .navigation--visible .navigation__list {
     text-align: right;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 0 2em 4em 0;
   }
 
   .navigation--visible .navigation__list-item {
